Integer overflow tests enhancements